tests/code/pass/pass_missing_return_variable_name.u
func:(v:i64)->(i64{v})

entrypoint: ~()->(iErrorCode:~i64{1})
{
	iErrorCode := func(77);
}